<resources>
    <string name="app_name">MaxAI</string>
    <string name="generate">Generate</string>
    <string name="prompt_hint">Prompt</string>
    <string name="error">Error!</string>
    <string name="enter_description">Edit the detailed description</string>
    <string name="size_256">256 x 256</string>
    <string name="size_512">512 x 512</string>
    <string name="size_1024">1024 x 1024</string>
    <string name="close">Close</string>
    <string name="download">Download</string>
    <string name="enter_prompt">Prompt Cant\'t Be Empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Share">Share</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Select_An_Image">Select an image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_profile">Update Profile</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvNozhqWyzuvPRsVcfgjCoTQMBRZNYpqfkseR6FPcFrty7h6qmEHeVLhY/ESSFV0bo2ZTfTsQOYm1kEoh6ix2cSCKuxEaHJUSwJx2aOwPY3xFpyklTeoik5UfxY5ezcgpb9HuZPI1k/cl5rmkCJX3cYiX+YKsnGDONJuQDf74XWEGUF83NeYFB+ipJXhIX5hNkJMeKaVSkoXGmTd7TDULtcgulfC1tdKPykFAJ0zXjmYlvON5jVLox08RDldqR6oDtEJXEWlOdolcWwU37Q9ceUGyfbeSl9b5V5uTQ9LRUo1AA2JmiEXbe0q6O32yoQqJrX504NLIKHKuxnCz5i4SWQIDAQAB</string>
    <string name="title_activity_full_screen_image_view">FullScreenImageViewActivity</string>

</resources>