<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.generate_image.GenerateImageFragment">
    <TextView
        android:id="@+id/editDesc"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/enter_description"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/promptInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="top"
        android:hint="@string/prompt_hint"
        android:textColorHint="@color/primary"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="@dimen/stroke_width_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/promptEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:singleLine="true"
            android:textColor="@color/primary"
           />
    </com.google.android.material.textfield.TextInputLayout>




    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/rounded_bg3"
        android:text="@string/generate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rewardAd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="Watch AD"
        android:onClick="Tap"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generateButton" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rewardAd_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="visible">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="1"
                    android:visibility="gone">


                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_250sdp"
                        android:layout_columnWeight="1"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/radius_corner" />


                </GridLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <GridLayout
                android:id="@+id/generatedImagesGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:columnCount="1"
                android:visibility="gone">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/generatedImageCard"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_320sdp"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/card_elevation_small"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/generatedImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:scaleType="centerCrop" />
                </com.google.android.material.card.MaterialCardView>


            </GridLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>